--- a/03B-Choosing color palettes.tex
+++ b/03B-Choosing color palettes.tex
@@ -17,8 +17,6 @@ sns.palplot(sns.color_palette("husl", 8))
 \begin{figure}
 \centering
 \includegraphics[width=0.7\linewidth]{images/color_palettes_14_0}
-\caption{}
-\label{fig:color_palettes_14_0}
 \end{figure}
 
 There is similarly a function called \texttt{husl\_palette()} that provides a more flexible interface to this system.
@@ -29,14 +27,19 @@ There is similarly a function called \texttt{husl\_palette()} that provides a mo
 	\frametitle{Seaborn Workshop}
 	\large
 \textbf{Using categorical Color Brewer palettes}
-Another source of visually pleasing categorical palettes comes from the Color Brewer tool (which also has sequential and diverging palettes, as we’ll see below). These also exist as matplotlib colormaps, but they are not handled properly. In seaborn, when you ask for a qualitative Color Brewer palette, you’ll always get the discrete colors, but this means that at a certain point they will begin to cycle.
+\begin{itemize}
+\item Another source of visually pleasing categorical palettes comes from the Color Brewer tool (which also has sequential and diverging palettes, as we’ll see below). 
+\item These also exist as matplotlib colormaps, but they are not handled properly. 
+\item In seaborn, when you ask for a qualitative Color Brewer palette, you’ll always get the discrete colors, but this means that at a certain point they will begin to cycle.
+\end{itemize}
+
 \end{frame}
 %====================================%
 \begin{frame}[fragile]
 	\frametitle{Seaborn Workshop}
 	\large
 	\begin{itemize}
-\item A nice feature of the Color Brewer website is that it provides some guidance on which palettes are color blind safe. 
+\item A nice feature of the \textbf{\textit{Color Brewer}} website is that it provides some guidance on which palettes are color blind safe. 
 \item There are a variety of [kinds](http://en.wikipedia.org/wiki/Color\_blindness) of color blindness, but the most common variant leads to difficulty distinguishing reds and greens.
 \item It’s generally a good idea to avoid using red and green for plot elements that need to be discriminated based on color.
 \end{itemize}
@@ -52,22 +55,15 @@ sns.palplot(sns.color_palette("Paired"))
 \begin{figure}
 \centering
 \includegraphics[width=0.7\linewidth]{images/color_palettes_16_0}
-\caption{}
-\label{fig:color_palettes_16_0}
 \end{figure}
-\end{frame}
-%====================================%
-\begin{frame}[fragile]
-	\frametitle{Seaborn Workshop}
-	\large
+\bigskip
 \begin{verbatim}
 sns.palplot(sns.color_palette("Set2", 10))
 \end{verbatim}
 \begin{figure}
 \centering
 \includegraphics[width=0.7\linewidth]{images/color_palettes_17_0}
-\caption{}
-\label{fig:color_palettes_17_0}
+
 \end{figure}
 \end{frame}
 %====================================%
@@ -101,7 +97,17 @@ sns.palplot(sns.color_palette(flatui))
 \begin{frame}[fragile]
 	\frametitle{Seaborn Workshop}
 	\large
-A while back, xkcd ran a crowdsourced effort to name random RGB colors. This produced a set of 954 named colors, which you can now reference in seaborn using the \texttt{xkcd\_rgb} dictionary:
+\noindent \textbf{xkcd}
+\begin{itemize}
+\item A while back, xkcd ran a crowdsourced effort to name random RGB colors. 
+\item This produced a set of 954 named colors, which you can now reference in seaborn using the \texttt{xkcd\_rgb} dictionary:
+\end{itemize}
+
+\end{frame}
+%====================================%
+\begin{frame}[fragile]
+	\frametitle{Seaborn Workshop}
+	\large
 \begin{verbatim}
 plt.plot([0, 1], [0, 1], sns.xkcd_rgb["pale red"], lw=3)
 plt.plot([0, 1], [0, 2], sns.xkcd_rgb["medium green"], lw=3)
@@ -110,9 +116,7 @@ plt.plot([0, 1], [0, 3], sns.xkcd_rgb["denim blue"], lw=3);
 
 \begin{figure}
 \centering
-\includegraphics[width=0.7\linewidth]{images/color_palettes_21_0}
-\caption{}
-\label{fig:color_palettes_21_0}
+\includegraphics[width=0.55\linewidth]{images/color_palettes_21_0}
 \end{figure}
 \end{frame}
 %====================================%
@@ -129,8 +133,7 @@ sns.palplot(sns.xkcd_palette(colors))
 \begin{figure}
 \centering
 \includegraphics[width=0.7\linewidth]{images/color_palettes_23_0}
-\caption{}
-\label{fig:color_palettes_23_0}
+
 \end{figure}
 
 \end{frame}
